# AIShopEcommerce

./: .gitignore  .replit  AI_Shopping_Platform_Presentation.md  ARCHITECTURE_UPDATE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  Dockerfile.backend  GITHUB_DEPLOYMENT.md  INSTALLATION.md  LICENSE  PRESENTATION_HTML.html  PROJECT_STRUCTURE.md  README.md  REAL_TIME_RETRAINING.md  RECENT_UPDATES.md  SCREENSHOT_GUIDE.md  VISUAL_GUIDE.md  app.py  auth.py  capture_screenshots.py  chatbot.py  database.py  dependencies.txt  docker-compose.yml  ecommerce.db  favorites.py  init_database.py  main_app.py  ml_api.py  ml_models.py  ml_retraining.py  order_history.json  order_management.py  presentation.py  pyproject.toml  replit.md  retraining_dashboard.py  setup.py  test_retraining.py  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: main.py  seed_data.py
backend/config/: database.py  settings.py
backend/controllers/: cart_controller.py  order_controller.py  product_controller.py  user_controller.py
backend/models/: README.md  base.py  cart.py  enums.py  order.py  product.py  user.py  user_behavior.py
backend/schemas/: cart_schemas.py  order_schemas.py  product_schemas.py  user_schemas.py
backend/services/: cart_service.py  order_service.py  product_service.py  user_service.py
data/: sample_products.csv  user_behavior_training.csv
docs/: SCREENSHOT_GUIDE.md
docs/images/: .gitkeep
models/: churn_model.pkl  scaler.pkl  spending_model.pkl
