[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
]
