[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "plotly>=6.1.2",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.5",
    "pymysql>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
    "psycopg2-binary>=2.9.10",
    "cryptography>=45.0.3",
    "selenium>=4.34.0",
    "setuptools>=80.9.0",
    "aiomysql>=0.2.0",
]
